--- a/MReg2.Rmd
+++ b/MReg2.Rmd
@@ -1,18 +1,21 @@
 ---
 title: "Wann ist eine Mehrebenenregression angebracht?"
-subtitle: "Videoserie Mehrebenenregression Teil 2/6"
 author: "Dr. Uwe Remer"
 date: "Juli 2022"
 output:
+  pdf_document:
+    toc: yes
+    toc_depth: '2'
   html_document:
     toc: yes
     number_sections: yes
     toc_depth: 2
     toc_float:
-      collapsed: true
+      collapsed: yes
     df_print: paged
     highlight: tango
     theme: spacelab
+subtitle: Videoserie Mehrebenenregression Teil 2/6
 ---
 
 ```{r setup, include=FALSE}
@@ -23,7 +26,7 @@ s = 2.8
     
 knitr::opts_chunk$set(eval=TRUE, echo = FALSE, message = FALSE, warning = FALSE,
                       fig.width=w, fig.height=h, fig.align='center')
-save <-  F
+save <-  T
 save_fig <- function(filename, save = TRUE){
   if(save==TRUE){
     ggsave(paste0("./Grafiken/", filename), 
@@ -37,7 +40,7 @@ save_fig <- function(filename, save = TRUE){
 }
 ```
 
-```{css, eval=T}
+```{css, eval=F}
 /* CSS Stil für Formeln unter Scatterplots */
 P.math {
     text-align: center;
@@ -45,307 +48,7 @@ P.math {
 }
 ```
 
-# Themenüberblick
-
-Hallo und herzlich Willkommen zum zweiten Teil der Videoserie zum Thema Mehrebenenregression in R. 
-
-Im ersten Video haben Sie das Grundprinzip der Mehrebenenregression kennengelernt. Wir hatten gesagt, dass eine Mehrebenenregression das geeignete statistische Verfahren ist, wenn Ihre Daten eine hiererchische Struktur aufweisen.
-
-In diesem zweiten Video vertiefen wir diesen Aspekt. 
-
-In der ersten Hälfte möchte ich an einem Beispiel verdeutlichen, was es eigentlich heißt, dass Daten eine Mehrebenenstruktur aufweisen und wie sich das in der Gleichung des Mehrebenenmodells wiederspiegelt.
-
-In der zweiten Hälfte schauen wir dann, wie mit Hilfe des Nullmodell und dem Intraklassenkorrelationskoeffizienten $ICC$  bestimmt werden kann, ob eine Mehrebenenregression angemessen ist. 
-
-Dann heißt auch Hands-on und wir rechnen mit R. 
-
-
-Die konkreten Lernziele sind, dass Sie...
-
-- theoretisch begründen können wie und warum der Kontext einen Einfluss auf Ihre Datenstruktur hat.
-- erläutern können, was ein Nullmodell und es als Regressionsgleichung formulieren können.
-- wissen welche Varianzkomponenten das Nullmodell beinhaltet und wo sie in der Regrgressionsgleichung zu finden sind.
-- wissen was die Intraklassenkorrelation ist und wie man sie mit R berechnet und interpretiert.
-
-
-
-# Context Matters
-
-Viele Phänomene, die wir erklären wollen, oder über die wir eine Prognose treffen wollen lassen sich nicht alleine auf der Individualebene, bzw. der Mikroebene modellieren.
-
-Also nicht nur persönliche Eigenschaften, Merkmale und Einstellungen haben einen Einfluss darauf, was Menschen tun, was sie denken, wen Sie wählen oder wie sie konsumieren.
-
-Der soziale Kontext und die institutionellen Strukturen auf Meso- und Makroebene haben einen nicht zu unterschätzenden Einfluss auf die Menschen und ihr handeln. 
-
-> Menschen teilen einen gemeinsamen sozialen Kontext innerhalb von Gruppen. Gleichzeitig unterscheiden diese Kontexte sich aber zwischen den Gruppen. Menschen unterliegen also unterschiedlichen sozialen Kontexten.
-
-Mit den Konzepten des methodologischen Individualismus und dem Makro-Mikro-Makro-Schema, das besser bekannt ist als die Coleman’sche Badewanne, wird analytisch klar, dass die Erklärung sozialer Phänomene immer alle Ebenen berücksichtigen muss.
-
-Dieses Argument möchte ich Ihnen anhand der Daten des ESS verdeutlichen. 
-
-Unser durchgängiges Beispiel in der Videoserie ist das Thema Politikverdrossenheit. Was in den Medien oder Alltagssprachlich als Politikverdrossenheit bezeichnet wird, wird in der Forschung mit dem Konzept „Political Support“ untersucht. Eine Komponente davon ist das politische Vertrauen der Bürger. Das ist unsere abhängige Variable.
-
-Wer mehr inhaltlich darüber wissen möchte, für den gibt es am Ende des Videos noch Literaturhinweise. 
-Also: Schauen wir uns das politische Vertrauen in Europa an: 
-
-```{r erstes_beispiel_daten_vorbereiten}
-set.seed(2022)
-library(foreign)
-ess <- read.spss("./Daten/ESS9e02.sav", 
-                 use.value.labels = FALSE,
-                 to.data.frame = TRUE,
-                 reencode = TRUE)
-
-idx_vars <- c("trstprl","trstplt","trstprt")
-ess$pol_vertrauen <- rowMeans(ess[,idx_vars], 
-                              na.rm = F)
-ess$zufr_wirtschaft <- ess$stfeco
-
-
-# Subset an Ländern, da sonst zu viele Daten
-laender <- c("BG","CY","DE","NO","SE","FR")
-ess_c6 <- ess[ess$cntry %in% laender, ]
-
-
-
-# Gruppierungsvariable ohne Gruppen (complete pooling)
-ess$no_countries <- "alle Befragte"
-ess_c6$no_countries <- "alle Befragte"
-
-# Nur Gültige
-ess_c6 <- na.omit(ess_c6[,c("pol_vertrauen",
-                            "zufr_wirtschaft",
-                            "cntry", 
-                            "no_countries")])
-
-# Mittelwert
-means_df <- aggregate(list(pol_vertrauen = ess_c6$pol_vertrauen),
-                           by=list(cntry = ess_c6$cntry),
-                           FUN=mean, na.rm=T)
-
-grand_mean <- mean(means_df[,2])
-
-```
-
-
-Es handelt sich um einen Mittelwert-Index aus drei Items. 
-
->„Bitte […] sagen Sie mir zu jeder öffentlichen Einrichtung oder Personengruppe, die ich Ihnen nenne, wie sehr Sie persönlich jeder einzelnen davon vertrauen. […] 0 bedeutet, dass Sie dieser Einrichtung oder Personengruppe überhaupt nicht vertrauen, und 10 bedeutet, dass Sie ihr voll und ganz vertrauen.“
-
-- den Parteien
-- dem Bundestag (bzw. dem jeweiligen Parlament im Land)
-- den Politikern
-
-```{r}
-library(ggplot2)
-library(ggtext)
-library(grid)
-#devtools::install_github("wilkelab/ungeviz")
-library(ungeviz)
-
-ggplot(ess_c6, aes(x=pol_vertrauen, y=no_countries)) +
-  geom_point() +
-  scale_x_continuous(limits = c(0,10), breaks=seq(0,10, by=2)) +  
-  coord_flip() +
-  labs(y="Länder", x="Pol. Vertrauen") +
-  theme_light() +
-  theme(axis.title.x = element_blank(),
-        plot.margin=unit(c(0,2,0,2), "cm"))
-
-save_fig("V1_1_1.png", save)
-```
-
-Aber hier sehen wir relativ wenig, weil hinter jedem Punkt eine Vielzahl von Befragten steckt. Um einen besseren Eindruck bekommen, ziehe ich die Punkte auf der vertikalen und horizontalen Achse etwas auseinander und mache die Punkte kleiner. So erkennen wir alle der knapp 50.000 Punkte.
-
-
-```{r}
-ggplot(ess, aes(pol_vertrauen, no_countries)) +
-  geom_jitter(position = position_jitter(width=.3, height = .3, seed = 2022), 
-              size=.5, alpha =.3, shape=".") +
-  scale_x_continuous(limits = c(0,10), breaks=seq(0,10, by=2)) +  
-  coord_flip() +
-  labs(y="Länder", x="Pol. Vertrauen") +
-  theme_light() +
-  theme(axis.title.x = element_blank(),
-        plot.margin=unit(c(0,2,0,2), "cm"))
-
-save_fig("V1_1_2.png", save)
-```
-
-Ganz schön viele Punkte. Damit das Beispiel übersichtlich bleibt, mache ich mit nur sechs der 27 Länder weiter und nutze von diesen auch nur 15 Prozent der Datenpunkte. 
-
-```{r}
-l <- length(ess_c6[,1])
-ess_c6 <- ess_c6[sample(1:l,l*0.15),]
-
-
-ggplot(ess_c6, aes(pol_vertrauen, no_countries)) +
-  geom_jitter(position = position_jitter(width=.3, height = .3, seed = 2022), 
-              size=1) +
-  scale_x_continuous(limits = c(0,10), breaks=seq(0,10, by=2)) +  
-  coord_flip() +
-  labs(y="Länder", x="Pol. Vertrauen") +
-  theme_light() +
-  theme(axis.title.x = element_blank(),
-        plot.margin=unit(c(0,2,0,2), "cm"))
-
-save_fig("V1_1_3.png", save)
-```
-
-Immer noch viel, aber etwas übersichtlicher. 
-Lassen Sie uns noch den Mean einzeichnen.
-
-
-```{r}
-ggplot(ess_c6, aes(pol_vertrauen, no_countries)) +
-  geom_jitter(position = position_jitter(width=.3, height = .3, seed = 2022), 
-              size=1) +
-  stat_summary(fun=mean, geom="vpline", 
-               size=1.2, height = 1, show.legend=FALSE) +  
-  scale_x_continuous(limits = c(0,10), breaks=seq(0,10, by=2)) +    
-  coord_flip() +
-  labs(y="Länder", x="Pol. Vertrauen") +
-  theme_light() +
-  theme(axis.title.x = element_blank(),
-        plot.margin=unit(c(0,2,0,2), "cm"))
-
-save_fig("V1_1_4.png", save)
-```
-
-Das Durchschnittliche politische Vertrauen in den sechs Länder liegt bei 4. Es ist also einen Skalenpunkt unterhalb der theoretischen Skalenmitte und somit leicht negativ. 
-Aber was sagt dieser Mittelwert aus? Wir wissen ja, dass hier Befragte aus sechs unterschiedlichen Ländern zusammengefasst werden. 
-
-Und wir sehen ja auch, dass die Streuung recht groß ist - um genau zu sein liegt die Standardabweichung bei `r round(sd(ess_c6$pol_vertrauen, na.rm=T),1)`. 
-
-Man muss kein Politikwissenschaftler sein, um zu ahnen, dass ein Teil der Unterschiede - oder genauer ein Teil der Streuung im politischen Vertrauen - darauf zurückzuführen ist, dass zwischen den Ländern große Unterschiede im politischen Vertrauen bestehen. 
-
-Also färben wir die Befrgaten mal nach Länderzugehörigkeit ein.
-
-
-```{r}
-farben <- c("#00966E", "#D57800", "#FFCC00", "#002654","#BA0C2F", "#006AA7")
-ggplot(ess_c6, 
-       aes(pol_vertrauen, no_countries, color=cntry)) +
-  geom_jitter(position = position_jitter(width=.3, height = .3, seed = 2022), 
-              size=1, alpha =1) +
-  scale_x_continuous(limits = c(0,10), breaks=seq(0,10, by=2)) +  
-  scale_colour_manual(values = farben) +
-  coord_flip() +
-  labs(y="Länder", x="Pol. Vertrauen") +
-  theme_light() +
-  theme(axis.title.x = element_blank(),
-        plot.margin=unit(c(0,0,0,2), "cm")) +
-  guides(colour = guide_legend(override.aes = list(size=2)))
-
-save_fig("V1_1_5.png", save)
-```
-
-Ja… man ahnt schon etwas… unten mehr grün… oben mehr rot und hellblau.
-Aber machen wir es doch ganz eindeutig und gruppieren die Befragten nach ihren Ländern…
-
-
-```{r}
-flags <- c("<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Flag_of_Bulgaria.svg/320px-Flag_of_Bulgaria.svg.png' alt='Bulgarien', title='Bulgarien'  width='20' /><br>",
-           "<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Flag_of_Cyprus.svg/320px-Flag_of_Cyprus.svg.png'  width='20' /><br>",
-           "<img src='https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/320px-Flag_of_Germany.svg.png'  width='20' /><br>",
-           "<img src='https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/320px-Flag_of_France.svg.png'  width='20' /><br>",
-           "<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Flag_of_Norway.svg/320px-Flag_of_Norway.svg.png'  width='20' /><br>",
-           "<img src='https://upload.wikimedia.org/wikipedia/en/thumb/4/4c/Flag_of_Sweden.svg/320px-Flag_of_Sweden.svg.png'  width='20' /><br>")
-
-
-ggplot(ess_c6, 
-       aes(pol_vertrauen, cntry, color=cntry)) +
-  geom_jitter(position = position_jitter(width=.3, height = .3, seed = 2022), 
-              size=1, alpha =1) +
-  scale_x_continuous(limits = c(0,10), breaks=seq(0,10, by=2)) +  
-  scale_y_discrete(labels = flags) +  
-  scale_colour_manual(values = farben) +
-  coord_flip() +
-  labs(y="Länder", x="Pol. Vertrauen") +
-  theme_light() +
-  theme(axis.title.x = element_blank(),
-        plot.margin=unit(c(0,0,0,2), "cm"),
-        axis.text.x  = element_markdown(color = "black", size = 7)) +
-  guides(colour = guide_legend(override.aes = list(size=2)))
-
-save_fig("V1_1_6.png", save)
-```
-
-Was wir nun sehen ist, dass ein Teil der Streuung in der Punktewolke auf Varianz zwischen den Ländern zurückzuführen ist. 
-
-```{r}
-
-ggplot(ess_c6, 
-       aes(pol_vertrauen, cntry, color=cntry)) +
-  geom_jitter(position = position_jitter(width=.3, height = .3, seed = 2022), 
-              size=1, alpha =.5) +
-  stat_summary(fun=mean, geom="vpline", 
-               size=1.2, height = 1, show.legend=FALSE) +  
-  scale_x_continuous(limits = c(0,10), breaks=seq(0,10, by=2)) +  
-  scale_y_discrete(labels = flags) +  
-  scale_colour_manual(values = farben) +
-  coord_flip() +
-  labs(y="Länder", x="Pol. Vertrauen") +
-  theme_light() +
-  theme(axis.title.x = element_blank(),
-        plot.margin=unit(c(0,0,0,2), "cm"),
-        axis.text.x  = element_markdown(color = "black", size = 7)) +
-  guides(colour = guide_legend(override.aes = list(size=2)))
-
-save_fig("V1_1_7.png", save)
-```
-
-Jedes Land hat ein anderes durchschnittliches Niveau von politischem Vertrauen. Wir können für jedes Land den Mittelwert einzeichnen. Und diese Mittelwerte streuen um den Mittelwert der Ländern, den sogenannten Grand Mean.
-
-```{r }
-
-ggplot(ess_c6, 
-       aes(pol_vertrauen, cntry, color=cntry)) +
-  geom_jitter(position = position_jitter(width=.3, height = .3, seed = 2022), 
-              size=1, alpha =.5) +
-  stat_summary(fun=mean, geom="vpline", 
-               size=1.2, height = 1, show.legend=FALSE) +  
-  geom_vline(xintercept=grand_mean, col="black", size=1) +
-  scale_x_continuous(limits = c(0,10), breaks=seq(0,10, by=2)) +  
-  scale_y_discrete(labels = flags) +  
-  scale_colour_manual(values = farben) +
-  coord_flip() +
-  labs(y="Länder", x="Pol. Vertrauen") +
-  theme_light() +
-  theme(axis.title.x = element_blank(),
-        plot.margin=unit(c(0,0,0,2), "cm"),
-        axis.text.x  = element_markdown(color = "black", size = 7)) +
-  guides(colour = guide_legend(override.aes = list(size=2)))
-
-save_fig("V1_1_8.png", save)
-```
-
-Was wir jetzt sehen: Es gibt also Varianz innerhalb der Länder: Befragte streuen um den ihren jeweiligen Landesmittelwert. Und es gibt Varianz zwischen den Ländern. Die Länder streuen um den Gesamtmittelwert, den Grand Mean. 
-
-Die Varianz innerhalb der Länder, also Varianz auf Individualebene kann nur durch Prädiktoren auf Individualebene erklärt werden. Und Varianz zwischen den Ländern kann nur durch Merkmale auf Ebene der Länder erklärt werden.
-
-Also: Menschen haben hohes oder niedriges politisches Vertrauen (Mikroebene). Aber der soziale Kontext - hier das politische System und gesellschaftliche Faktoren auf Ebene der Länder - beeinflussen als Makroebene das politische Vertrauen. Ein Teil der Unterschiede im politischen Vertrauen, geht also alleine auf diese Kontextfaktoren zurück. Und kann also nur durch Variation auf der Kontextebene erklärt werden. 
-
-Wie wir bereits gesehen haben ist die Mehrebenenregression das geeignete Verfahren zur Analyse sozialer Phänomene, bei denen Kontextfaktoren und deren Wechselwirkungen mit der Individualebene explizit modelliert werden sollen. 
-
-Eine Bedingung ist aber, dass die Daten auch empirisch eine hierarchische Struktur aufweisen.
-
-Also dass die Ebenen nicht nur strukturell vorhanden sind, sondern darüber hinaus, dass auch tatsächlich eine empirische Variation zwischen den Ländern vorhanden ist.
-
-Und zwar für die jeweilige Y-Variable, die für Sie in Ihrer Forschungsfrage relevant ist! 
-
-Das heißt ob und wie stark die Mehrebenenstruktur ausgeprägt ist, ist kein Merkmal des gesamten Datensatzes, sondern ein  Merkmal einer spezifischen Variable in Abhängigkeit einer spezifischen Gruppierungsvariable. Und das kann bei einer anderen Variable, die einem anderen datengenerierenden Prozess unterliegt, ganz anders aussehen. 
-
-Der erste Schritt einer Mehrebeneanalyse ist also zu prüfen, ob ausreichend Variation auf der oberen Ebene vorhanden. Dafür schätzen wir ein sogenannten **Nullmodell** oder leeres Modell (manchmal auch Baseline Modell). 
-
-
-# Das Nullmodell
-
-Das Nullmodell ist ein Mehrebenenmodell, bei dem noch *keine* unabhängigen Variablen mit ins Modell aufgenommen 
-werden. Es ist ein Random Intercept Modell ohne Prädiktoren. 
-
-Das hier erkennen Sie bestimmt: 
-
+# 
 <p class=math> 
 $\hat{y}=a+bx$
 </p>
@@ -446,6 +149,8 @@ Wenn wir für jedes Land den Ländermittelwert, also den länderpsezifischen Int
 Das sehen Sie nun rechts im Bild.
 
 ```{r }
+w <- w/2
+
 V2_1_8 <- ggplot(ess_c6, 
        aes(pol_vertrauen, cntry, color=cntry)) +
   geom_jitter(position = position_jitter(width=.3, height = .3, seed = 2022), 
@@ -463,6 +168,9 @@ V2_1_8 <- ggplot(ess_c6,
         plot.margin=unit(c(0,0,0,0), "cm"),
         axis.text.x  = element_markdown(color = "black", size = 2)) 
 
+V2_1_8
+
+save_fig("V2_2_1.png", save)
 
 # Zentrieren um den Gruppenmittelwert
 sdf <- split(ess_c6, ess_c6$cntry)
@@ -487,14 +195,16 @@ V2_1_9 <- ggplot(ess_c6,
   labs(y="Länder", x="") +
   theme_light() +
   theme(axis.title.x = element_blank(),
-        plot.margin=unit(c(0,.3,0,0), "cm"),
+        plot.margin=unit(c(0,0,0,0), "cm"),
         axis.text.x  = element_markdown(color = "black", size = 2)) 
+V2_1_9
 
 
-library(gridExtra)
-grid.arrange(V2_1_8, V2_1_9, nrow=1)
+save_fig("V2_2_2.png", save)
 
-save_fig("V1_1_9.png", save)
+w <- w*2
+#library(gridExtra)
+#grid.arrange(V2_1_8, V2_1_9, nrow=1)
 ```
 
 Hier ist die Varianz nur noch bei `r round(var(ess_c6$pol_vertrauen_gc, na.rm=T),2)`, weil die Varianz zwischen den Ländern fehlt. `r round(var(ess_c6$pol_vertrauen_gc, na.rm=T),2)` ist die Varianz auf Individualebene.
